--- a/css/common.css
+++ b/css/common.css
@@ -22,6 +22,12 @@ td.description {
   margin: 0px;
 }
 
+td.column {
+  padding: 5px;
+  border-spacing: 0px;
+  border-left: 1px solid black;
+}
+
 .config_label {
   text-align: right;
   padding-right: 6px;
