Add imaginary number page

--- a/css/common.css
+++ b/css/common.css
@@ -81,3 +81,11 @@ div.pythagorasBox {
   margin-right: auto;
   margin-bottom: 1.75em;
 }
+
+div.imagRotBox {
+  width: 400px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.75em;
+}
