--- a/css/common.css
+++ b/css/common.css
@@ -89,3 +89,11 @@ div.imagRotBox {
   margin-right: auto;
   margin-bottom: 1.75em;
 }
+
+div.complexBox {
+  width: 600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.75em;
+}
