Update convolution intro

--- a/css/common.css
+++ b/css/common.css
@@ -18,7 +18,7 @@ table.config {
 }
 
 td.description {
-  padding: 15px;
+  padding: 10px;
   margin: 0px;
 }
 
@@ -134,17 +134,25 @@ div.complexDivBox {
   margin-bottom: 1.75em;
 }
 
-div.wavesBox {
+div.signalTestBox {
+  width: 500px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.75em;
+}
+
+div.wavesBox1 {
   width: 1000px;
-  height: 200px;
+  height: 300px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1.75em;
 }
 
 div.convBox {
-  width: 1000px;
-  height: 200px;
+  width: 500px;
+  height: 300px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1.75em;
