--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,16 @@ body {
   font-size: 14pt;
 }
 
+h1 h2 h3 h4 {
+  margin-block-start: 0.25em;;
+  margin-block-end: 0.35em;
+}
+
+p {
+  margin-top: 0.25em;
+  margin-bottom: 0.5em;
+}
+
 table.page-table {
   border: solid rgb(40, 40, 40) 1px;
   background-color: rgb(255, 255, 238, 1);
@@ -35,15 +45,6 @@ table.eq-sequence td {
 .config_label {
   text-align: right;
   padding-right: 6px;
-}
-
-h1 {
-  margin-block-start: 0.25em;;
-  margin-block-end: 0.35em;
-}
-
-p {
-  margin-block: 0.75em;
 }
 
 div.circleBox {
