--- a/css/common.css
+++ b/css/common.css
@@ -3,9 +3,14 @@ body {
   font-size: 14pt;
 }
 
-h1 h2 h3 h4 {
-  margin-block-start: 0.25em;;
-  margin-block-end: 0.35em;
+h1, h2 {
+  margin-block-start: 0.33em;
+  margin-block-end: 0.2em;
+}
+
+h3, h4 {
+  margin-block-start: 0.25em;
+  margin-block-end: 0.1em;
 }
 
 p {
@@ -141,6 +146,15 @@ div.signalTestBox {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1.75em;
+}
+
+div.waveBoxWide {
+  width: 1000px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0.75em;
+  margin-bottom: 0.75em;
 }
 
 div.wavesBox1 {
