--- a/css/common.css
+++ b/css/common.css
@@ -148,8 +148,17 @@ div.signalTestBox {
   margin-bottom: 1.75em;
 }
 
-div.waveBoxWide {
+div.waveBoxFull {
   width: 1000px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0.75em;
+  margin-bottom: 0.75em;
+}
+
+div.waveBoxHalf {
+  width: 500px;
   height: 300px;
   margin-left: auto;
   margin-right: auto;
